--- a/source/css/_page/flink.styl
+++ b/source/css/_page/flink.styl
@@ -1,22 +1,334 @@
-.container
+.flink-desc
+  margin: .2rem 0 .5rem
+//bf原生
+.butterfly-flink-list
+  overflow: auto
+  padding: 10px 10px 0
+  text-align: center
+
+  & > .flink-list-item
+    position: relative
+    float: left
+    overflow: hidden
+    line-height: 17px
+    -webkit-transform: translateZ(0)
+    height: 100px;
+    padding: 10px;
+    width: calc(100% / 5 - 0.5rem)
+    margin: 0.5rem 0.25rem;
+    border-radius: 12px;
+    border: var(--style-border);
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+
+    +maxWidth1200()
+      width: calc(50% - 15px) !important
+
+    +maxWidth600()
+      width: calc(100% - 15px) !important
+
+    &:hover
+      border-color: #101010 !important;
+      background-color: #eeeeee !important;
+      box-shadow: #cccccc !important;
+
+      .flink-item-icon
+        width: 0;
+        height: 0;
+        margin-left: -10px;
+      
+    &:hover:before,
+    &:focus:before,
+    &:active:before
+      transform: scale(1)
+
+    a
+      color: var(--font-color)
+      text-decoration: none
+
+      .flink-item-icon
+        float: left
+        overflow: hidden
+        margin: 15px 10px
+        width: 60px
+        height: 60px
+        border-radius: 35px
+        transition: all .3s ease-out
+        margin: 8px 0 8px 0;
+        border-radius: 50%;
+        overflow: hidden;
+
+        img
+          width: 100%
+          height: 100%
+          transition: filter 375ms ease-in .2s, transform .3s
+          object-fit: cover
+
+      .img-alt
+        display: none
+
+.flink-item-info
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 10px;
+  text-align: left;
+  flex-direction: column;
+
+  .flink-item-name
+    @extend .limit-one-line
+    padding: 12px 0 16px 0;
+    height: auto;
+    font-weight: bold
+    font-size: 1.2em
+
+  .flink-item-desc
+    @extend .limit-one-line
+    padding: 0
+    height: 35px
+    font-size: .93em
+    opacity: .7;
+    word-break: break-all;
+    white-space: break-spaces;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+.flink-name
+  margin-bottom: 5px
+  font-weight: bold
+  font-size: 1.5em
+//flexcard卡片
+#article-container img
+  margin-bottom: 0.5rem;
+  object-fit: cover;
+  max-height: 900px;
+.flexcard-flink-list
+  overflow hidden
+  .flink-list-card
+    .wrapper img
+      transition: transform .5s ease-out !important;
+
+  & > a
+    width: calc(100% / 5 - 0.5rem);
+    height 150px
+    position relative
+    display block
+    margin: 0.5rem 0.25rem;
+    float left
+    overflow hidden
+    padding: 0;
+    border-radius: 8px;
+    transition all .3s ease 0s, transform .6s cubic-bezier(.6, .2, .1, 1) 0s
+    box-shadow none
+    border: var(--style-border)!important;
+    &:hover
+      .info
+        transform translateY(-100%)
+      .wrapper
+        img
+          transform scale(1.2)
+      &::before
+        position: fixed
+        width:inherit
+        margin:auto
+        left:0
+        right:0
+        top:10%
+        border-radius: 10px
+        text-align: center
+        z-index: 100
+        content: attr(data-title)
+        font-size: 20px
+        color: #fff
+        padding: 10px
+        background-color: rgba($theme-color,0.8)
+
+    .cover
+      width 100%
+      transition transform .5s ease-out
+    .wrapper
+      position relative
+      .fadeIn
+        animation coverIn .8s ease-out forwards
+      img
+        height 150px
+        pointer-events none
+    .info
+      display flex
+      flex-direction column
+      justify-content center
+      align-items center
+      width 100%
+      height 100%
+      overflow hidden
+      border-radius 3px
+      background-color hsla(0, 0%, 100%, .7)
+      transition transform .5s cubic-bezier(.6, .2, .1, 1) 0s
+      img
+        position relative
+        top 45px
+        width 80px
+        height 80px
+        border-radius 50%
+        box-shadow 0 0 10px rgba(0, 0, 0, .3)
+        z-index 1
+        text-align center
+        pointer-events none
+      span
+        padding 20px 10% 60px 10%
+        font-size 16px
+        width 100%
+        text-align center
+        box-shadow 0 0 10px rgba(0, 0, 0, .3)
+        background-color hsla(0, 0%, 100%, .7)
+        color var(--font-color)
+        white-space nowrap
+        overflow hidden
+        text-overflow ellipsis
+.flexcard-flink-list>a .info,
+.flexcard-flink-list>a .wrapper .cover
+  position absolute
+  top 0
+  left 0
+
+@media screen and (max-width:1024px)
+  .flexcard-flink-list
+    & > a
+      width calc(33.33333% - 15px)
+
+@media screen and (max-width:600px)
+  .flexcard-flink-list
+    & > a
+      width calc(50% - 15px)
+
+[data-theme=dark]
+  .flexcard-flink-list a .info,
+  .flexcard-flink-list a .info span
+    background-color rgba(0, 0, 0, .6)
+  .flexcard-flink-list
+    & > a
+      &:hover
+        &:before
+          background-color: rgba(#121212,0.8);
+.justified-gallery > div > img,
+.justified-gallery > figure > img,
+.justified-gallery > a > a > img,
+.justified-gallery > div > a > img,
+.justified-gallery > figure > a > img,
+.justified-gallery > a > svg,
+.justified-gallery > div > svg,
+.justified-gallery > figure > svg,
+.justified-gallery > a > a > svg,
+.justified-gallery > div > a > svg,
+.justified-gallery > figure > a > svg
+  position static!important
+
+trans($time = 0.28s)
+  transition: all $time ease
+  -moz-transition: all $time ease
+  -webkit-transition: all $time ease
+  -o-transition: all $time ease
+
+//volantis卡片，我的最爱
+.volantis-flink-list
+  display: flex
+  flex-wrap: wrap
+  justify-content: flex-start
+  margin: -0.5 * 16px
+  align-items: stretch
+.site-card
+  margin: 16px * 0.5
+  width: "calc(100% / 4 - %s)" % 16px
+  @media screen and (min-width: 2048px)
+      width: "calc(100% / 5 - %s)" % 16px
+  @media screen and (max-width: 768px)
+      width: "calc(100% / 3 - %s)" % 16px
+  @media screen and (max-width: 500px)
+      width: "calc(100% / 2 - %s)" % 16px
+  display: block
+  line-height: 1.4
+  height 100%
+  .img
+    width: 100%
+    height 150px
+    @media screen and (max-width: 500px)
+      height 100px
+    overflow: hidden
+    border-radius: 12px * 0.5
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.2)
+    background: #f6f6f6
+    img
+      width: 100%
+      height 100%
+      pointer-events:none;
+      // trans(.75s)
+      transition: transform 2s ease
+      object-fit: cover
+
+  .info
+    margin-top: 16px * 0.5
+    img
+      width: 32px
+      height: 32px
+      pointer-events:none;
+      border-radius: 16px
+      float: left
+      margin-right: 8px
+      margin-top: 2px
+    span
+      display: block
+    .title
+      font-weight: 600
+      font-size: var(--global-font-size)
+      color: #444
+      display: -webkit-box
+      -webkit-box-orient: vertical
+      overflow: hidden
+      -webkit-line-clamp: 1
+      trans()
+    .desc
+      font-size: var(--global-font-size)
+      word-wrap: break-word;
+      line-height: 1.2
+      color: #888
+      display: -webkit-box
+      -webkit-box-orient: vertical
+      overflow: hidden
+      -webkit-line-clamp: 2
+  .img
+    trans()
+  &:hover
+    .img
+      box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.1), 0 2px 4px 0px rgba(0, 0, 0, 0.1), 0 4px 8px 0px rgba(0, 0, 0, 0.1), 0 8px 16px 0px rgba(0, 0, 0, 0.1)
+    .info .title
+      color: #ff5722
+//byer卡片
+#article-container
   .flink
     margin-bottom: 20px
 
-    .flink-list
+    .byer-flink-list
       overflow: auto
       padding: 10px 10px 0
       text-align: center
 
       & > .flink-list-item
         position: relative
+        background: #ffffff
         float: left
         overflow: hidden
         margin: 15px 7px
         width: calc(100% / 3 - 15px)
-        height: 90px
+        height: 120px
+        border-radius: 2px
         line-height: 17px
         -webkit-transform: translateZ(0)
-        addBorderRadius(8)
+        border: 1px solid
+        box-shadow: 3px 3px 1px 1px #fee34c;
 
         +maxWidth1024()
           width: calc(50% - 15px) !important
@@ -24,64 +336,118 @@
         +maxWidth600()
           width: calc(100% - 15px) !important
 
-        &:hover
-          .flink-item-icon
-            margin-left: -10px
-            width: 0
-
-        &:before
-          position: absolute
-          top: 0
-          right: 0
-          bottom: 0
-          left: 0
-          z-index: -1
-          background: var(--text-bg-hover)
-          content: ''
-          transition: transform .3s ease-out
-          transform: scale(0)
-
-        &:hover:before,
-        &:focus:before,
-        &:active:before
-          transform: scale(1)
-
         a
           color: var(--font-color)
           text-decoration: none
+          .flink-item-bar
+            height: 15px
+            border-width: 0 0 1px 0
+            border-style: none none solid none
+            background: #fde135
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            padding: 0 3px 0 3px
+            sapn
+              width: 10px;
+              height: 10px;
+              margin: 0 1px 0 1px
+              border-radius: 50%;
+              display: block;
+              border: 1px solid;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+              &.flink-item-bar-yellow
+                background: #fde135
+              &.flink-item-bar-green
+                background: #249a33
+              &.flink-item-bar-red
+                background: #f13b06
+              &.flink-item-bar-x
+                background: transparent
+                border: 0px
+                margin-left: auto
+                transform: rotate(45deg);
+                font-size: 23px;
+                padding: 0px 0px 6px 0px;
+          .flink-item-content
+            display: flex;
+            height: 105px
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 5px 0 5px;
+            .flink-item-text
+              width: 60%;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              .flink-item-name
+                @extend .limit-one-line
+                max-width: 100%;
+                padding: 0px 5px 0px 5px;
+                margin: 0px 0 6px 0;
+                height: 50%;
+                font-weight: bold;
+                font-size: 1.43em;
+                border-width: 0 0 7px 0;
+                border-style: solid;
+                border-color: #fbf19f;
+              .flink-item-desc
+                @extend .limit-one-line
+                max-width: 100%;
+                height: 50%;
+                padding: 5px 5px 5px 5px;
+                font-size: 0.93em;
+                position: relative
+                &:before
+                  content: "";
+                  background: transparent;
+                  display: block;
+                  height: calc(100% - 4px);
+                  width: calc(100% - 4px);
+                  position: absolute;
+                  left: 0;
+                  top: 0;
+                  border-radius: 2px;
+                  border: 1px solid;
+                  clip-path: polygon(0 0, 100% 0, 100% 100%, 95% 100%, 95% 50%, 90% 50%, 90% 100%, 0 100%);
 
-          .flink-item-icon
-            float: left
-            overflow: hidden
-            margin: 15px 10px
-            width: 60px
-            height: 60px
-            border-radius: 7px
-            transition: width .3s ease-out
 
-            img
-              width: 100%
-              height: 100%
-              transition: filter 375ms ease-in .2s, transform .3s
-              object-fit: cover
+            .flink-item-icon
+              overflow: hidden;
+              margin: 0px 5px;
+              width: 70px;
+              height: 70px;
+              border: 1px solid;
+              border-radius: 2px;
+              transition: width .3s ease-out
+              box-shadow: 2px 2px 1px 1px #fee34c;
+              img
+                width: 50px;
+                height: 50px;
+                margin: 9px 9px;
+                transition: filter 375ms ease-in .2s, transform .3s
+                object-fit: cover
 
-          .img-alt
-            display: none
-
-    .flink-item-name
-      @extend .limit-one-line
-      padding: 16px 10px 0 0
-      height: 40px
-      font-weight: bold
-      font-size: 1.43em
-
-    .flink-item-desc
-      @extend .limit-one-line
-      padding: 16px 10px 16px 0
-      height: 50px
-      font-size: .93em
-
-    .flink-name
-      margin-bottom: 5px
-      font-weight: bold
-      font-size: 1.5em
+              .img-alt
+                display: none
+//byer卡片暗夜模式改造
+[data-theme=dark]
+  #article-container
+    .flink
+      .byer-flink-list
+        & > .flink-list-item
+          background: rgb(40,40,40)
+          box-shadow: 3px 3px 1px 1px #1B5A70;
+          a
+            .flink-item-bar
+              background: #1B5A70;
+            .flink-item-content
+              .flink-item-text
+                .flink-item-name
+                  border-color: #5EBAD9;
+              .flink-item-icon
+                box-shadow: 2px 2px 1px 1px #1B5A70;
